Add payment QR code images

--- a/purchase.html
+++ b/purchase.html
@@ -34,8 +34,7 @@
                         <div class="qr-placeholder">
                             <p>请使用微信扫描二维码支付</p>
                             <div class="qr-box">
-                                <span class="qr-text">微信收款码</span>
-                                <p class="qr-hint">请替换为您的收款码图片</p>
+                                <img src="images/wechat-qr.png" alt="微信收款码" class="qr-image">
                             </div>
                         </div>
                     </div>
@@ -50,8 +49,7 @@
                         <div class="qr-placeholder">
                             <p>请使用支付宝扫描二维码支付</p>
                             <div class="qr-box">
-                                <span class="qr-text">支付宝收款码</span>
-                                <p class="qr-hint">请替换为您的收款码图片</p>
+                                <img src="images/alipay-qr.png" alt="支付宝收款码" class="qr-image">
                             </div>
                         </div>
                     </div>
