Add starfield animation, enhance UI effects, remove Alipay option

--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Starry Background -->
+    <canvas id="starfield" class="starfield"></canvas>
+    <div class="overlay"></div>
     <div class="container">
         <!-- Login Form -->
         <div class="card" id="loginCard">
@@ -112,5 +115,6 @@
     </div>
 
     <script src="js/admin.js"></script>
+    <script src="js/starfield.js"></script>
 </body>
 </html>
