--- a/download.html
+++ b/download.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Starry Background -->
+    <canvas id="starfield" class="starfield"></canvas>
+    <div class="overlay"></div>
     <div class="container">
         <div class="card">
             <!-- Success Banner -->
@@ -91,5 +94,6 @@
     </div>
 
     <script src="js/app.js"></script>
+    <script src="js/starfield.js"></script>
 </body>
 </html>
