--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Starry Background -->
+    <canvas id="starfield" class="starfield"></canvas>
+    <div class="overlay"></div>
     <div class="container">
         <div class="card">
             <!-- Logo / Title -->
@@ -46,9 +49,6 @@
                 <span class="purchase-text">方式二：在线购买密钥</span>
             </a>
 
-            <!-- Admin Link -->
-            <p class="admin-link"><a href="admin.html">管理后台</a></p>
-
             <!-- Error Message -->
             <div id="errorMessage" class="error-message hidden">
                 <span class="error-icon">⚠</span>
@@ -79,5 +79,6 @@
     </div>
 
     <script src="js/app.js"></script>
+    <script src="js/starfield.js"></script>
 </body>
 </html>
